# mesalib-feedstock

./: .gitignore  abs.yaml
.cursor/rules/: x11_gui_rebuilds.mdc
recipe/: build.sh  conda_build_config.yaml  meta.yaml
recipe/test/: CMakeLists.txt  test_egl.cpp
